Fix auction item view issue. Change to flex overflow

--- a/src/components/containers/styles/AuctionItemContainerStyles.css
+++ b/src/components/containers/styles/AuctionItemContainerStyles.css
@@ -1,23 +1,25 @@
 .card-h1 {
   font-family: Gilroy-Medium;
   font-weight: 700;
+  font-size: 24px;
   text-align: center;
   letter-spacing: 2px;
 }
 
 .card-p {
   font-family: Gilroy-Regular;
+  font-size: 14px;
   text-align: center;
 }
 
 .card-container {
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 30px;
   border-radius: 50px;
   box-shadow: 0px 5px 10px lightgrey;
-  width: 400px;
-  height: 350px;
+  width: 300px;
+  height: 250px;
   margin-bottom: 50px;
   margin-left: 50px;
   margin-right: 50px;
